--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "material-ui-popup-state": "^5.0.8",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
